app/ui/globals.css
:root {
  --main-color: #ff4ba8;
  --secondary-color: #0b1124;
}
*,
*:before,
*:after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

section {
  scroll-margin-top: 50px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 1.45rem;
}

a {
  text-decoration: none;
  color: #fff;
}

p {
  margin: 0 0 0.6rem;
  line-height: 1.55rem;
  font-size: 16px;
  color: #f7f7f7;
}
/* Helpful classes */

.hidden {
  display: none;
}

.colored {
  color: var(--main-color);
}

.button {
  cursor: pointer;
  border: none;
  padding: 12px 24px;
  margin: 10px;
  margin-left: 0;
  transition: all 0.5s ease-in-out;
  background: rgba(11, 17, 36, 0.3);
  color: #fff;
  border: 1px solid rgba(11, 17, 36, 0.3);
  display: inline-block;
  white-space: nowrap;
  &:hover {
    border: 1px solid #fff;
    background: transparent;
  }

  &.colored {
    background: var(--main-color);
    border-color: transparent;
  }
  &.colored:hover {
    background: transparent;
    border-color: var(--main-color);
  }
  &.colored:disabled {
    background: transparent;
    border-color: var(--main-color);
    cursor: not-allowed;
    color: #dddddd44;
  }
}

section {
  margin-bottom: 100px;
}

.section-title {
  display: inline-block;
  font-size: 2rem;
  position: relative;
  margin-bottom: 65px;
  margin-top: 40px;
  font-weight: 400;

  &:after {
    content: "";
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    height: 3px;
    margin-top: 10px;
    background: var(--main-color);
  }
}

.active-nav-link {
  position: relative;

  &:before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    width: 7px;
    background: #ff4ba8;
  }

  a {
    color: #ff4ba8;
  }
}

@media all and (max-width: 768px) {
  html {
    font-size: 85%;
  }

  .content {
    width: 100%;
  }
}
@media only screen and (max-width: 480px) {
  html {
    font-size: 100%;
  }
}

